# Android_GRU_IIR_Audio_Filter_Xiaomi

./: .gitignore  README.md  acquire_audio_stream.cpp  deploy_to_android.bat  deploy_to_android.sh
automation/: README.md  _repo_paths.py  build_android.py  copy_legacy_sources.py  deploy_android.py  env_check_all.py  fetch_third_party.py
automation/tests/: test_paths.py
tests/: 00_generate_signals.py  01_run_phone_tests.py  02_analyse_precision.py  02b_analyse_precision_ep.py  03_analyse_spectrum.py  04_parse_latency.py  05_analyse_robustness.py  06_stability_phone.py  06b_power_phone.py  07_plot_all.py  08_analyse_teammate_data.py  09_analyse_block_latency.py  README.md
workspaces/: README.md
workspaces/android_app/: gradle.properties  gradlew.bat  settings.gradle
workspaces/android_app/app/: build.gradle  proguard-rules.pro
workspaces/android_app/app/src/main/: AndroidManifest.xml
workspaces/android_app/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
workspaces/android_app/gradle/wrapper/: gradle-wrapper.properties
workspaces/android_runtime/: CMakeLists.txt  acquire_audio_stream.hpp
workspaces/android_runtime/cmake/: DynamicONNXRuntime.cmake
workspaces/android_runtime/include/: App.hpp  BasicSessionHandler.hpp  IOStreamHandler.hpp  Player.hpp  Recorder.hpp  SharedAudioBuffer.hpp  acquire_audio_stream.hpp
workspaces/android_runtime/src/: App.cpp  main.cpp
workspaces/gru_model/exported_onnx_models/: lowpass_rnn.onnx
workspaces/oboe_boilerplates/: acquire_audio_stream.cpp  acquire_audio_stream.hpp
(+4 files in other folders)
